:bug: solve layout bugs

--- a/src/style.css
+++ b/src/style.css
@@ -1,16 +1,21 @@
 html{
     font-family: "Nunito";
-    overflow-x: hidden;
+    background-color: #E9E9E9;
+    height: 100%;
+    width: 100%;    
 }
 body{
     box-sizing: border-box;
     margin: 0;
+    overflow: auto;
     padding: 0;
-    background-color: #E9E9E9;
+    background-color: #E9E9E9;  
 }
 .boards {
-    display: flex;
-    height: 100vh;
+    display: inline-flex;
+    flex: 1;
+    height: 100%;
+    width: 100%;
 }
 
 .board {
@@ -18,11 +23,13 @@ body{
     padding: 0!important;
     margin: 0px;
     display: flex;
+    flex: 1;
     flex-direction: column;
 }
 
 .board h3 {
     padding: 16px!important;
+    min-width: 300px;
     width: 100%;
     margin: 0;
     background-color: #F3F3F3;
@@ -32,7 +39,7 @@ body{
 
 .dropzone {
     padding: 16px;
-    min-width: 282px;
+    min-width: 300px;
     min-height: 200px;
     justify-content: center;
     height: 100%;
